--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 # SlicerPySera/CMakeLists.txt
 cmake_minimum_required(VERSION 3.16.3)
-project(PySera)
+project(PySERA)
 
 set(EXTENSION_HOMEPAGE "https://github.com/MohammadRSalmanpour/SlicerPySERA")
-set(EXTENSION_CATEGORY "Radiomics")
+set(EXTENSION_CATEGORY "Analysis")
 set(EXTENSION_CONTRIBUTORS "Mohammad R. Salmanpour, Sirwan Barichin")
 set(EXTENSION_DESCRIPTION "PySERA radiomics extraction library integrated into 3D Slicer.")
 set(EXTENSION_ICONURL "https://raw.githubusercontent.com/radiuma-com/SlicerPySERA/refs/heads/main/Resources/Icons/SlicerPySERA_png_icon.png")
@@ -20,6 +20,7 @@ add_subdirectory(PySeraCLI)
 add_subdirectory(PySeraQt)
 
 include(${Slicer_EXTENSION_CPACK})
+
 
 
 
